# agent-orchestration

./: .gitignore  README.md  graph.py  main.py  pyproject.toml  requirements.txt  schema.py  utils.py
agents/: planner.py  reporter.py  researcher.py  reviewer.py  saver.py  summarizer.py
output/: report.md
tests/: test_pipeline.py
