[project]
name = "agent-orchestration"
version = "0.1.0"
description = "LangGraph multi-agent research and reporting orchestration demo using Gemini API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.1.0",
    "langgraph==1.2.4",
    "python-dotenv==1.2.2",
    "python-json-logger==4.1.0",
]

[project.optional-dependencies]
test = ["pytest==9.0.3"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
